tests/transpiler/x/c/user_type_literal.c
// Generated by Mochi 0.10.32 on 2025-07-20 15:06 +0700
#include <stdio.h>
#include <string.h>

typedef struct {
    const char* name;
    int age;
} Person;

typedef struct {
    const char* title;
    int author;
} Book;

Book book = (Book){.title = "Go", .author = (Person){.name = "Bob", .age = 42}};

int main(void) {
    printf("%d\n", book.author.name);
    return 0;
}
